--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,13 @@
 /* Site Styles Go Here */
+.footer-flex{
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+
+
+}
+
+.footer-item-flex{
+flex: 0 1 auto;
+
+}
