--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,15 @@ flex: 0 1 auto;
             transform: rotate(-10deg);
   }
 
+  /*BLUR*/
+.blur img {
+  -webkit-transition: all 1s ease;
+     -moz-transition: all 1s ease;
+       -o-transition: all 1s ease;
+      -ms-transition: all 1s ease;
+          transition: all 1s ease;
+}
+ 
+.blur img:hover {
+  -webkit-filter: blur(5px);
+}
