--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 /* Site Styles Go Here */
+/*copyrgiht info*/
+
 .footer-flex{
 display: flex;
 flex-direction: row;
@@ -9,22 +11,25 @@ justify-content: space-between;
 flex: 0 1 auto;
 }
 
+
 /*TILT*/
 .tilt {
-    -webkit-transition: all 0.5s ease;
-       -moz-transition: all 0.5s ease;
-         -o-transition: all 0.5s ease;
-        -ms-transition: all 0.5s ease;
-            transition: all 0.5s ease;
-  }
-   
-  .tilt:hover {
-    -webkit-transform: rotate(-10deg);
-       -moz-transform: rotate(-10deg);
-         -o-transform: rotate(-10deg);
-        -ms-transform: rotate(-10deg);
-            transform: rotate(-10deg);
-  }
+  -webkit-transition: all 0.5s ease;
+     -moz-transition: all 0.5s ease;
+       -o-transition: all 0.5s ease;
+      -ms-transition: all 0.5s ease;
+          transition: all 0.5s ease;
+}
+ 
+.tilt:hover {
+  -webkit-transform: rotate(-10deg);
+     -moz-transform: rotate(-10deg);
+       -o-transform: rotate(-10deg);
+      -ms-transform: rotate(-10deg);
+          transform: rotate(-10deg);
+}
+
+
 
   /*BLUR*/
 .blur img {
